# spritesheet-marker

./: .gitignore  Cargo.toml  build.rs
resources/: level_ground-marked.json  level_ground.json  level_objects.json
src/: another_one.rs  file_navigator.rs  lib.rs  main.rs
src/marker/: mod.rs
src/sprite/: geom.rs  mod.rs  sheet_info.rs  texture_packer.rs
src/ui/: mod.rs
